partially implemented supply creation